# fairscape_grader

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  sandbox.sh
.claude/skills/agentic-rescore/: SKILL.md
.claude/skills/build-local-manifest/: SKILL.md
.claude/skills/build-manifest/: SKILL.md
.claude/skills/checkpoint/: SKILL.md
.claude/skills/compute-summary-stats/: SKILL.md
.claude/skills/create-computation/: SKILL.md
.claude/skills/emit-build-script/: SKILL.md
.claude/skills/emit-build-shell/: SKILL.md
.claude/skills/env-setup/: SKILL.md
.claude/skills/ethics-questionnaire/: SKILL.md
.claude/skills/extract-crate-metadata/: SKILL.md
.claude/skills/fairscape-remote-rocrate-wizard/: SKILL.md
rubrics/ai-ready/: 0.a-findable.yaml  0.b-accessible.yaml  0.c-interoperable.yaml  0.d-reusable.yaml  1.a-transparent.yaml  1.b-traceable.yaml  1.c-interpretable.yaml  1.d-key-actors-identified.yaml  2.a-semantics.yaml  2.b-statistics.yaml  2.c-standards.yaml  2.d-potential-sources-of-bias.yaml  2.e-data-quality.yaml  3.a-data-documentation-template.yaml  3.b-fit-for-purpose.yaml  3.c-verifiable.yaml  4.a-ethically-acquired.yaml  4.b-ethically-managed.yaml  4.c-ethically-disseminated.yaml  4.d-secure.yaml  5.a-persistent.yaml  5.b-domain-appropriate.yaml  5.c-well-governed.yaml  5.d-associated.yaml  6.a-standardized.yaml  6.b-computationally-accessible.yaml  6.c-portable.yaml  6.d-contextualized.yaml  dump_prompts.py  extract.py  grade.py
src/fairscape_wizard/: __init__.py  grade.py  ids.py  remote_fetch.py  rubric_eval.py
(+29 files in other folders)
