[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fairscape-wizard"
version = "0.3.0"
description = "Helper module for the FAIRSCAPE RO-Crate wizard Claude Code skill bundle"
requires-python = ">=3.10"
dependencies = [
    "fairscape-models",
    "fairscape-cli>=1.2.9",
    "pydantic-ai>=0.0.14",
    "pyyaml",
]

[project.scripts]
fairscape-grade = "fairscape_wizard.grade:main"

[tool.hatch.build.targets.wheel]
packages = ["src/fairscape_wizard"]

# rubric_eval imports extract.py and reads the 28 rubric YAMLs at runtime. They
# live outside the package tree (shared with grade.py), so bundle the directory
# into the wheel under fairscape_wizard/_rubrics/ai-ready.
# rubric_eval._find_rubric_src_dir() resolves this path when pip-installed.
[tool.hatch.build.targets.wheel.force-include]
"rubrics/ai-ready" = "fairscape_wizard/_rubrics/ai-ready"
